# dpa-full-regenerated

./: .gitignore  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT.md  LICENSE  README.md  TESTPYPI_SETUP.md  mkdocs.yml  netlify.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  sample.csv  test_debug.csv
.github/workflows/: ci.yml  docs-simple.yml  docs.yml  pages.yml  publish-testpypi.yml  publish.yml  test.yml  wheels.yml
data/: transactions_small.csv
docs/: index.md
docs/api/: cli-commands.md  python-api.md
docs/examples/: basic-usage.md
docs/features/: data-profiling.md  data-sampling.md  data-validation.md
docs/getting-started/: configuration.md  first-steps.md  installation.md  quick-start.md
docs/user-guide/: overview.md
examples/: basic_usage.py  schema.json  validation_rules.json
examples/basic-usage/: index.html
features/data-sampling/: index.html
features/data-validation/: index.html
getting-started/configuration/: index.html
getting-started/first-steps/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
python/: MANIFEST.in  pyproject.toml
python/dpa/: __init__.py  __main__.py  console.py  dpa_magic.py
python/dpa_pandas/: __init__.py
scripts/: build_and_publish.sh  deploy-docs.sh  publish-testpypi.sh  publish_to_testpypi.sh
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/api/cli-commands/: index.html
site/api/python-api/: index.html
site/examples/basic-usage/: index.html
site/features/data-profiling/: index.html
site/features/data-sampling/: index.html
site/features/data-validation/: index.html
site/getting-started/configuration/: index.html
site/getting-started/first-steps/: index.html
site/getting-started/installation/: index.html
site/getting-started/quick-start/: index.html
site/user-guide/overview/: index.html
src/: cli.rs  lib.rs  main.rs
src/engine/: mod.rs
src/io/: mod.rs
tests/: __init__.py  generate_test_data.py  test_cli.py  test_dpa_core.py  test_practical_examples.py  test_python_api.py
tests/test_data/: customers.csv  invalid_schema.json  mixed_types.csv  products.csv  transactions_large.csv  transactions_medium.csv  transactions_small.csv  valid_schema.json  validation_rules.json
user-guide/overview/: index.html
