[package]
name = "dpa"
version = "0.2.3"
edition = "2021"
description = "Data Processing Accelerator (Rust + Polars) — CLI + PyO3 bindings"
license = "MIT"
authors = ["DPA Contributors <contributors@dpa.dev>"]
repository = "https://github.com/Ashraf0001/data-processing-accelerator-dpa"
keywords = ["data-processing", "polars", "rust", "cli", "data-analysis"]
categories = ["data-processing", "command-line-utilities"]

[lib]
name = "dpa_core"
crate-type = ["cdylib"]

[[bin]]
name = "dpa"
path = "src/main.rs"

[dependencies]
polars = { version = "0.40", features = ["lazy", "csv", "parquet", "json", "strings", "temporal", "rolling_window", "object", "regex", "sql"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
pyo3 = { version = "0.21", features = ["extension-module"] }
rand = { version = "0.8", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
