[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "dpa-cli"
version = "0.2.1"
description = "Data Processing Accelerator (CLI + Python API, powered by Rust Polars)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "DPA Contributors", email = "contributors@dpa.dev" }
]
keywords = ["data-processing", "polars", "rust", "cli", "data-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Data Scientists",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/Ashraf0001/data-processing-accelerator-dpa"
Repository = "https://github.com/Ashraf0001/data-processing-accelerator-dpa"
Documentation = "https://github.com/Ashraf0001/data-processing-accelerator-dpa#readme"
"Bug Tracker" = "https://github.com/Ashraf0001/data-processing-accelerator-dpa/issues"

[project.scripts]
dpa = "dpa.__main__:main"

[tool.setuptools.packages.find]
include = ["dpa*"]

[tool.maturin]
bindings = "pyo3"
module-name = "dpa_core"
path = ".."
features = ["pyo3/extension-module"]
